src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
.label {
  min-height: 10rem;
  text-align: left;
  display: block;
  color: var(--color-text-primary);
}

.group {
  position: relative;
}

.input {
  display: block;
  width: 100%;
  height: 4rem;
  border-radius: 4px;
  border: 1px solid white;
  padding: 1rem 1.5rem;
  margin-top: 0.5rem;
  font-size: 1.4rem;
}

.togglePassword {
  position: absolute;
  top: 50%;
  right: 8px;
  transform: translateY(-50%);
  height: 2.4rem;
  color: var(--color-background-main);
  cursor: pointer;
}

.error {
  color: red;
  font-size: 1.2rem;
  display: block;
  line-height: 1.4;
  margin-top: 0.4rem;

  &::before {
    display: inline;
    content: '⚠ ';
  }
}

.submit {
  width: 100%;
  font-weight: 600;

  &:hover {
    cursor: pointer;
    background-color: var(--color-primary-dark);
  }

  &:active {
    opacity: 0.8;
  }

  &:disabled {
    opacity: 0.4;
    cursor: not-allowed;
  }
}

.submitWrapper {
  max-height: 2.4rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

